@@ -4,12 +4,13 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import jenkins.plugins.git.junit.jupiter.WithGitSampleRepo;
 import org.htmlunit.HttpMethod;
 import org.htmlunit.WebRequest;
 import org.htmlunit.html.HtmlCheckBoxInput;
@@ -28,106 +29,122 @@ import jenkins.plugins.git.GitSampleRepoRule;
 import net.sf.json.JSONObject;
 import org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition;
 import org.jenkinsci.plugins.workflow.cps.CpsScmFlowDefinition;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
-import org.jvnet.hudson.test.BuildWatcher;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.RunLoadCounter;
+import org.jvnet.hudson.test.junit.jupiter.BuildWatcherExtension;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
-public class WorkflowJobTest {
+@WithJenkins
+@WithGitSampleRepo
+class WorkflowJobTest {
     private static final Logger LOGGER = Logger.getLogger(WorkflowJobTest.class.getName());
 
-    @ClassRule public static BuildWatcher watcher = new BuildWatcher();
+    @SuppressWarnings("unused")
+    @RegisterExtension
+    private static final BuildWatcherExtension BUILD_WATCHER = new BuildWatcherExtension();
+    private JenkinsRule r;
+    private GitSampleRepoRule sampleRepo;
 
-    @Rule public JenkinsRule j = new JenkinsRule();
-    @Rule public GitSampleRepoRule sampleRepo = new GitSampleRepoRule();
+    @BeforeEach
+    void beforeEach(JenkinsRule rule, GitSampleRepoRule repo) {
+        r = rule;
+        sampleRepo = repo;
+    }
 
     @Issue("JENKINS-40255")
-    @Test public void getSCM() throws Exception {
-        WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
+    @Test
+    void getSCM() throws Exception {
+        WorkflowJob p = r.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-            "node {\n" +
-                    "  checkout(new hudson.scm.NullSCM())\n" +
-            "}", false /* for hudson.scm.NullSCM */));
-        assertTrue("No runs has been performed and there should be no SCMs", p.getSCMs().isEmpty());
+                """
+                        node {
+                          checkout(new hudson.scm.NullSCM())
+                        }""", false /* for hudson.scm.NullSCM */));
+        assertTrue(p.getSCMs().isEmpty(), "No runs has been performed and there should be no SCMs");
 
-        j.buildAndAssertSuccess(p);
+        r.buildAndAssertSuccess(p);
 
-        assertEquals("Expecting one SCM", 1, p.getSCMs().size());
+        assertEquals(1, p.getSCMs().size(), "Expecting one SCM");
 
         p.setDefinition(new CpsFlowDefinition("error 'Fail!'", true));
 
-        j.assertBuildStatus(Result.FAILURE, p.scheduleBuild2(0));
+        r.assertBuildStatus(Result.FAILURE, p.scheduleBuild2(0));
 
-        assertEquals("Expecting one SCM even though last run failed",1, p.getSCMs().size());
+        assertEquals(1, p.getSCMs().size(), "Expecting one SCM even though last run failed");
 
         p.setDefinition(new CpsFlowDefinition("echo 'Pass!'", true));
 
-        j.buildAndAssertSuccess(p);
+        r.buildAndAssertSuccess(p);
 
-        assertEquals("Expecting zero SCMs",0, p.getSCMs().size());
+        assertEquals(0, p.getSCMs().size(), "Expecting zero SCMs");
     }
 
     @Issue("JENKINS-34716")
-    @Test public void polling() throws Exception {
+    @Test
+    void polling() throws Exception {
         sampleRepo.init();
         sampleRepo.write("Jenkinsfile", "echo 'first version'");
         sampleRepo.git("add", "Jenkinsfile");
         sampleRepo.git("commit", "-m", "init");
-        WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
+        WorkflowJob p = r.jenkins.createProject(WorkflowJob.class, "p");
         p.addTrigger(new SCMTrigger(""));
         p.setDefinition(new CpsScmFlowDefinition(new GitSCM(sampleRepo.toString()), "Jenkinsfile"));
-        j.assertLogContains("first version", j.buildAndAssertSuccess(p));
+        r.assertLogContains("first version", r.buildAndAssertSuccess(p));
         sampleRepo.write("Jenkinsfile", "echo 'second version'");
         sampleRepo.git("commit", "-a", "-m", "init");
-        j.jenkins.setQuietPeriod(0);
-        j.createWebClient().getPage(new WebRequest(j.createWebClient().createCrumbedUrl(p.getUrl() + "polling"), HttpMethod.POST));
-        j.waitUntilNoActivity();
+        r.jenkins.setQuietPeriod(0);
+        r.createWebClient().getPage(new WebRequest(r.createWebClient().createCrumbedUrl(p.getUrl() + "polling"), HttpMethod.POST));
+        r.waitUntilNoActivity();
         WorkflowRun b2 = p.getLastBuild();
         assertEquals(2, b2.getNumber());
-        j.assertLogContains("second version", b2);
+        r.assertLogContains("second version", b2);
     }
 
     @Issue("JENKINS-38669")
-    @Test public void nonEmptySCMListForGitSCMJobBeforeBuild() throws Exception {
-        WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
+    @Test
+    void nonEmptySCMListForGitSCMJobBeforeBuild() throws Exception {
+        WorkflowJob p = r.jenkins.createProject(WorkflowJob.class, "p");
         CpsScmFlowDefinition def = new CpsScmFlowDefinition(new GitSCM("I don't care"), "Jenkinsfile");
-        assertEquals("Expecting one SCM for definition", 1, def.getSCMs().size());
+        assertEquals(1, def.getSCMs().size(), "Expecting one SCM for definition");
         p.setDefinition(def);
-        assertEquals("Expecting one SCM", 1, p.getSCMs().size());
+        assertEquals(1, p.getSCMs().size(), "Expecting one SCM");
     }
 
     @Issue("JENKINS-38669")
-    @Test public void neverBuiltSCMBasedJobMustBeTriggerableByHook() throws Exception {
+    @Test
+    void neverBuiltSCMBasedJobMustBeTriggerableByHook() throws Exception {
         sampleRepo.init();
         sampleRepo.write("Jenkinsfile", "echo 'first version'");
         sampleRepo.git("add", "Jenkinsfile");
         sampleRepo.git("commit", "-m", "init");
-        WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
+        WorkflowJob p = r.jenkins.createProject(WorkflowJob.class, "p");
         p.addTrigger(new SCMTrigger(""));
         p.setDefinition(new CpsScmFlowDefinition(new GitSCM(sampleRepo.toString()), "Jenkinsfile"));
-        j.jenkins.setQuietPeriod(0);
-        j.createWebClient().getPage(new WebRequest(j.createWebClient().createCrumbedUrl(p.getUrl() + "polling"), HttpMethod.POST));
-        j.waitUntilNoActivity();
+        r.jenkins.setQuietPeriod(0);
+        r.createWebClient().getPage(new WebRequest(r.createWebClient().createCrumbedUrl(p.getUrl() + "polling"), HttpMethod.POST));
+        r.waitUntilNoActivity();
         WorkflowRun b1 = p.getLastBuild();
         assertEquals(1, b1.getNumber());
-        j.assertLogContains("first version", b1);
+        r.assertLogContains("first version", b1);
     }
 
     @Test
-    public void addAction() throws Exception {
-        WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
+    void addAction() throws Exception {
+        WorkflowJob p = r.jenkins.createProject(WorkflowJob.class, "p");
         WhoAmI a = new WhoAmI();
         p.addAction(a);
         assertNotNull(p.getAction(WhoAmI.class));
     }
 
     @Issue("JENKINS-27299")
-    @Test public void disabled() throws Exception {
-        WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
-        JenkinsRule.WebClient wc = j.createWebClient();
+    @Test
+    void disabled() throws Exception {
+        WorkflowJob p = r.jenkins.createProject(WorkflowJob.class, "p");
+        JenkinsRule.WebClient wc = r.createWebClient();
         assertDisabled(p, false, wc);
 
         // Disable the project
@@ -135,7 +152,7 @@ public class WorkflowJobTest {
         HtmlCheckBoxInput checkbox = form.getInputByName("enable");
         assertTrue(checkbox.isChecked());
         checkbox.setChecked(false);
-        j.submit(form);
+        r.submit(form);
         assertDisabled(p, true, wc);
 
         // Re-enable the project
@@ -143,13 +160,13 @@ public class WorkflowJobTest {
         checkbox = form.getInputByName("enable");
         assertFalse(checkbox.isChecked());
         checkbox.setChecked(true);
-        j.submit(form);
+        r.submit(form);
         assertDisabled(p, false, wc);
 
         wc.getPage(new WebRequest(wc.createCrumbedUrl(p.getUrl() + "disable"), HttpMethod.POST));
         assertDisabled(p, true, wc);
         assertNull(p.scheduleBuild2(0));
-        assertThat(new CLICommandInvoker(j, "enable-job").invokeWithArgs("p"), CLICommandInvoker.Matcher.succeededSilently());
+        assertThat(new CLICommandInvoker(r, "enable-job").invokeWithArgs("p"), CLICommandInvoker.Matcher.succeededSilently());
         assertDisabled(p, false, wc);
     }
 
@@ -161,15 +178,15 @@ public class WorkflowJobTest {
     }
 
     @Test
-    public void newBuildsShouldNotLoadOld() throws Throwable {
-        var p = j.createProject(WorkflowJob.class, "p");
+    void newBuildsShouldNotLoadOld() throws Throwable {
+        var p = r.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition("", true));
         for (int i = 0; i < 10; i++) {
-            j.buildAndAssertSuccess(p);
+            r.buildAndAssertSuccess(p);
         }
         RunLoadCounter.assertMaxLoads(p, /* just lastBuild */ 1, () -> {
             for (int i = 0; i < 5; i++) {
-                j.buildAndAssertSuccess(p);
+                r.buildAndAssertSuccess(p);
             }
             return null;
         });
@@ -177,8 +194,8 @@ public class WorkflowJobTest {
 
     @Issue("JENKINS-73824")
     @Test
-    public void deletionShouldWaitForBuildsToComplete() throws Throwable {
-        var p = j.createProject(WorkflowJob.class);
+    void deletionShouldWaitForBuildsToComplete() throws Throwable {
+        var p = r.createProject(WorkflowJob.class);
         p.setDefinition(new CpsFlowDefinition(
                 """
                 try {
@@ -190,19 +207,19 @@ public class WorkflowJobTest {
                 }
                 """, true));
         var b = p.scheduleBuild2(0).waitForStart();
-        j.waitForMessage("about to sleep", b);
+        r.waitForMessage("about to sleep", b);
         // The build isn't done and catches the interruption, so ItemDeletion.cancelBuildsInProgress should have to wait at least 3 seconds for it to complete.
         LOGGER.info(() -> "Deleting " + p);
         p.delete();
         LOGGER.info(() -> "Deleted " + p);
         // Make sure that the job really has been deleted.
-        assertThat(j.jenkins.getItemByFullName(p.getFullName()), nullValue());
+        assertThat(r.jenkins.getItemByFullName(p.getFullName()), nullValue());
         // ItemDeletion.cancelBuildsInProgress should guarantee that the queue is empty at this point.
-        var executables = Stream.of(j.jenkins.getComputers())
+        var executables = Stream.of(r.jenkins.getComputers())
                 .flatMap(c -> c.getAllExecutors().stream())
                 .map(Executor::getCurrentExecutable)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         assertThat(executables, empty());
     }
 
